RunThese30M.java failed "assert(ZAddress::is_marked(addr)) failed: Should be marked"

XMLWordPrintable

    • jfr
    • b20
    • x86_64
    • linux, windows

      The following test failed in the JDK18 CI:

      applications/runthese/RunThese30M.java

      Here's snippets from the hs_err_pid file:

      # Internal Error (/opt/mach5/mesos/work_dir/slaves/ff806ead-2cac-495d-9cbc-62116f99bf14-S14140/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/613f517d-67d3-486d-87f2-01f4b9f74b7d/runs/d2691236-49f2-4fbe-8646-dc091f7193b9/workspace/open/src/hotspot/share/gc/z/zBarrier.cpp:41), pid=23069, tid=23079
      # assert(ZAddress::is_marked(addr)) failed: Should be marked
      #
      # JRE version: Java(TM) SE Runtime Environment (18.0+20) (fastdebug build 18-ea+20-1223)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 18-ea+20-1223, mixed mode, sharing, tiered, compressed class ptrs, z gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0x19ee898] unsigned long ZBarrier::mark<false, true, false, true>(unsigned long)+0x238

      <snip>

      --------------- T H R E A D ---------------

      Current thread (0x00007f7258096910): ConcurrentGCThread "ZDriver" [stack: 0x00007f72405e3000,0x00007f72406e3000] [id=23079]

      Stack: [0x00007f72405e3000,0x00007f72406e3000], sp=0x00007f72406e12a0, free space=1016k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x19ee898] unsigned long ZBarrier::mark<false, true, false, true>(unsigned long)+0x238
      V [libjvm.so+0x2e6c0b] AccessInternal::PostRuntimeDispatch<ZBarrierSet::AccessBarrier<548932ul, ZBarrierSet>, (AccessInternal::BarrierType)2, 548932ul>::oop_access_barrier(void*)+0xbb
      V [libjvm.so+0xed0a4e] send_event(FinalizerEntry const*, InstanceKlass const*, TimeInstant<CounterRepresentation, FastUnorderedElapsedCounterSource> const&, Thread*)+0x6e
      V [libjvm.so+0xed184e] JfrFinalizerStatisticsEvent::send_unload_event(InstanceKlass const*)+0xfe
      V [libjvm.so+0xefa938] JfrKlassUnloading::on_unload(Klass const*)+0x218
      V [libjvm.so+0xf6c319] do_unloading_klass(Klass*)+0x29
      V [libjvm.so+0x978a46] ClassLoaderData::classes_do(void (*)(Klass*))+0x36
      V [libjvm.so+0x983c91] ClassLoaderDataGraph::classes_unloading_do(void (*)(Klass*))+0x51
      V [libjvm.so+0xf71248] write_klasses()+0x4a8
      V [libjvm.so+0xf72daa] JfrTypeSet::serialize(JfrCheckpointWriter*, JfrCheckpointWriter*, bool, bool)+0x12a
      V [libjvm.so+0xea7517] JfrCheckpointManager::on_unloading_classes()+0x57
      V [libjvm.so+0x181e674] SystemDictionary::do_unloading(GCTimer*)+0x1d4
      V [libjvm.so+0x1a8a336] ZUnload::unlink()+0xa6
      V [libjvm.so+0x1a22cda] ZHeap::process_non_strong_references()+0x3a
      V [libjvm.so+0x1a1bf0c] ZDriver::concurrent_process_non_strong_references()+0x7c
      V [libjvm.so+0x1a1d694] ZDriver::gc(ZDriverRequest const&)+0x12c4
      V [libjvm.so+0x1a1e36f] ZDriver::run_service()+0x1ef
      V [libjvm.so+0xa3f2ab] ConcurrentGCThread::run()+0x2b
      V [libjvm.so+0x188d3e0] Thread::call_run()+0x100
      V [libjvm.so+0x156cd04] thread_native_entry(Thread*)+0x104

            Assignee:
            Markus Grönlund
            Reporter:
            Daniel Daugherty
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: