8275445: RunThese30M.java failed "assert(ZAddress::is_marked(addr)) failed: Should be marked"

Reviewed-by: egahlin, coleenp